--- a/Homework 7/homework7.tex
+++ b/Homework 7/homework7.tex
@@ -93,12 +93,12 @@ RM ANOVA treats time as a categorical factor. Time is considered a set of discre
 \problem{}
 What is the difference between polynomial contrasts and comparisons of means between different observation periods?
 
-Polynomial contrast can be used to test which level of polynomial (linear, quadratic, cubic) explains the relation under study. The comparison of means between different observation periods doesn't lead to information about how the dependent variable changes with time, just that there may be some difference between the observations (e.g. categorical differences). In that respect, polynomial contrasts can give the statistician more information about the underlying variable.
+Polynomial contrast can be used to test which level of polynomial (linear, quadratic, cubic) explains the relation under study. For $N$ observation periods, a polynomial of up to order $N-1$ can be investigated. The comparison of means between different observation periods doesn't lead to information about how the dependent variable changes with time, just that there is some difference between the observations (e.g. categorical differences). In that respect, polynomial contrasts can give the statistician more information about the evolution of the underlying variable with respect to time.
 
 \problem{}
 Researchers were interested in how confidence in students fluctuates from the end of sophomore year through the end of senior year in college. Further, researchers were interested in whether students attended a private (i.e., Harvard, Stanford, and Yale) or public (i.e., UMass---Boston, San Francisco State University, and Southern Connecticut State University) university would influence end-of-year student confidence ratings, and possible trajectories.
 
-Use the data set “confidence.csv” to answer the following questions. For your information, t1-t3 indicate time of observation 1-3; i.e., end of sophomore year, end of junior year, and end of senior year, respectively. The variable public indicates whether the student attended a public (public = 1) or private (public = 0) university.\\
+Use the data set “confidence.csv” to answer the following questions. For your information, t1-t3 indicate time of observation 1-3; i.e., end of sophomore year, end of junior year, and end of senior year, respectively. The variable public indicates whether the student attended a public (public = 1) or private (public = 0) university.
 
 \noindent1. Convert the wide format data set to a long format data set. Remember that you will need to create an ID variable, and an Observation/Time variable. Show syntax and the header and footer of the long format data set.\\
 
